@@ -103,6 +103,7 @@ STDMETHODIMP CRLECodedSubtitle::Reload()
 
 STDMETHODIMP CRLECodedSubtitle::SetSourceTargetInfo(CString yuvMatrix, int targetBlackLevel, int targetWhiteLevel)
 {
+    yuvMatrix.Replace(_T(".VSFilter"), _T(""));
     int nPos = 0;
     CString range = yuvMatrix.Tokenize(_T("."), nPos);
     CString matrix = yuvMatrix.Mid(nPos);
