@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2014 see Authors.txt
+ * (C) 2006-2015 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -143,6 +143,7 @@ public:
     int m_defaultWrapStyle;
     int m_collisions;
     bool m_fScaledBAS;
+    CString m_sYCbCrMatrix;
 
     bool m_fUsingAutoGeneratedDefaultStyle;
 
